--- a/index.html
+++ b/index.html
@@ -1,70 +1,135 @@
 <!DOCTYPE html>
-const heart = document.createElement('div');
-heart.className = 'heart';
-heart.innerHTML = '❤';
-heart.style.left = Math.random() * 100 + 'vw';
-heart.style.animationDuration = 4 + Math.random() * 4 + 's';
-document.body.appendChild(heart);
-}
-</script>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Valentine's Sneaky Surprise</title>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      font-family: 'Georgia', serif;
+      background: #fff;
+      overflow: hidden;
+    }
 
+    .container {
+      max-width: 600px;
+    }
 
-<!-- Background music (plays after first click) -->
-<audio id="bgMusic" loop>
-<!-- Replace this with your favourite romantic song URL -->
-<source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+    h1 {
+      font-size: 32px;
+    }
+
+    button {
+      font-size: 18px;
+      padding: 10px 20px;
+      margin: 10px;
+      cursor: pointer;
+    }
+
+    #result {
+      display: none;
+      margin-top: 20px;
+    }
+
+    img {
+      margin-top: 15px;
+      width: 300px;
+      max-width: 90%;
+    }
+
+    .heart {
+      position: fixed;
+      bottom: -20px;
+      font-size: 24px;
+      animation: floatUp linear forwards;
+    }
+
+    @keyframes floatUp {
+      to {
+        transform: translateY(-110vh);
+        opacity: 0;
+      }
+    }
+  </style>
+</head>
+<body>
+
+<div class="container">
+  <h1>Ishmeet, will you be my Valentine? 💕💖</h1>
+
+  <button id="yesBtn">Yes 💖</button>
+  <button id="noBtn">No 😳</button>
+
+  <div id="result">
+    <h2>Yayyyyy!! 🎉💃</h2>
+    <p>Best decision ever made 😍</p>
+    <img src="https://media.giphy.com/media/l4JyOCNEfXvVYEqB2/giphy.gif" alt="celebration">
+  </div>
+</div>
+
+<!-- Music -->
+<audio id="softMusic" loop>
+  <source src="https://www.bensound.com/bensound-music/bensound-love.mp3" type="audio/mpeg">
 </audio>
 
-
-<!-- Question Card -->
-<div class="card" id="questionCard">
-<!-- Replace with your own image URL -->
-<h2>Ishmeet, will you be my Valentine? 💕💖</h2>
-<div class="buttons">
-<button id="yesBtn">Yes 💕</button>
-<button id="noBtn">No 🙃</button>
-</div>
-</div>
-
-
-<!-- Celebration Screen -->
-<div class="card hidden celebrate" id="celebrateCard">
-<h1>Yayyyyy!! 🎉💃</h1>
-<p>Best decision ever made 😍</p>
-<img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" alt="Celebration" />
-</div>
-
+<audio id="celebrationMusic">
+  <source src="https://www.bensound.com/bensound-music/bensound-dance.mp3" type="audio/mpeg">
+</audio>
 
 <script>
-const noBtn = document.getElementById('noBtn');
-const yesBtn = document.getElementById('yesBtn');
-const questionCard = document.getElementById('questionCard');
-const celebrateCard = document.getElementById('celebrateCard');
-const bgMusic = document.getElementById('bgMusic');
+  const yesBtn = document.getElementById("yesBtn");
+  const noBtn = document.getElementById("noBtn");
+  const result = document.getElementById("result");
+  const softMusic = document.getElementById("softMusic");
+  const celebrationMusic = document.getElementById("celebrationMusic");
 
+  let noCount = 0;
 
-let speed = 120;
+  // Start soft music on first click anywhere
+  document.body.addEventListener("click", () => {
+    softMusic.volume = 0.4;
+    softMusic.play();
+  }, { once: true });
 
+  noBtn.addEventListener("mouseover", () => {
+    noCount++;
+    noBtn.style.position = "absolute";
+    noBtn.style.left = Math.random() * 80 + "vw";
+    noBtn.style.top = Math.random() * 80 + "vh";
 
-noBtn.addEventListener('mouseover', () => {
-speed += 30;
-const x = Math.random() * speed - speed / 2;
-const y = Math.random() * speed - speed / 2;
-noBtn.style.transform = `translate(${x}px, ${y}px)`;
-});
+    if (noCount >= 6) {
+      noBtn.style.display = "none";
+    }
+  });
 
+  yesBtn.addEventListener("click", () => {
+    softMusic.pause();
+    celebrationMusic.volume = 0.7;
+    celebrationMusic.play();
 
-document.body.addEventListener('click', () => {
-bgMusic.play().catch(() => {});
-}, { once: true });
+    result.style.display = "block";
+    yesBtn.style.display = "none";
+    noBtn.style.display = "none";
 
+    setInterval(createHeart, 300);
+  });
 
-yesBtn.addEventListener('click', () => {
-questionCard.classList.add('hidden');
-celebrateCard.classList.remove('hidden');
-});
+  function createHeart() {
+    const heart = document.createElement("div");
+    heart.className = "heart";
+    heart.innerHTML = "💖";
+    heart.style.left = Math.random() * 100 + "vw";
+    heart.style.animationDuration = 4 + Math.random() * 3 + "s";
+    document.body.appendChild(heart);
+
+    setTimeout(() => heart.remove(), 7000);
+  }
 </script>
-
 
 </body>
 </html>
