--- a/index.html
+++ b/index.html
@@ -2,119 +2,152 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>For You ❤️</title>
+  <title>Valentine’s Sneaky Surprise 💖</title>
+
   <style>
     body {
-      font-family: 'Arial', sans-serif;
-      background: linear-gradient(135deg, #ffd6e8, #fff0f5);
-      height: 100vh;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      font-family: "Georgia", serif;
+      background: #fff5f8;
       text-align: center;
+      margin: 0;
+      padding: 40px 20px;
+      overflow-x: hidden;
     }
 
     .container {
-      background: white;
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-      width: 90%;
-      max-width: 400px;
-      position: relative;
+      max-width: 420px;
+      margin: auto;
     }
 
-    img {
-      width: 100%;
-      border-radius: 15px;
-      margin-bottom: 15px;
+    .couple-img {
+      width: 200px;
+      max-width: 80%;
+      height: auto;
+      border-radius: 18px;
+      margin-bottom: 20px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
     }
 
     h1 {
-      color: #e91e63;
+      font-size: 26px;
       margin-bottom: 20px;
     }
 
     button {
-      padding: 12px 25px;
+      padding: 10px 20px;
       font-size: 16px;
-      border: none;
-      border-radius: 25px;
-      cursor: pointer;
       margin: 10px;
-      transition: 0.3s;
+      cursor: pointer;
+      border-radius: 8px;
+      border: none;
     }
 
     #yesBtn {
-      background-color: #e91e63;
+      background: #ff5c8d;
       color: white;
     }
 
     #noBtn {
-      background-color: #ccc;
-      color: #333;
-      position: absolute;
+      background: #ddd;
     }
 
-    #message {
-      margin-top: 20px;
-      font-size: 20px;
-      color: #e91e63;
+    #celebration {
       display: none;
+      margin-top: 30px;
+    }
+
+    .heart {
+      position: fixed;
+      bottom: -20px;
+      font-size: 20px;
+      animation: floatUp linear forwards;
+    }
+
+    @keyframes floatUp {
+      from {
+        transform: translateY(0);
+        opacity: 1;
+      }
+      to {
+        transform: translateY(-100vh);
+        opacity: 0;
+      }
     }
   </style>
 </head>
+
 <body>
 
-  <!-- Soft music when page opens -->
-  <audio id="bgMusic" autoplay loop>
-    <source src="https://www.bensound.com/bensound-music/bensound-love.mp3" type="audio/mpeg">
-  </audio>
-
-  <!-- Happy music after YES -->
-  <audio id="yesMusic">
-    <source src="https://www.bensound.com/bensound-music/bensound-romantic.mp3" type="audio/mpeg">
-  </audio>
-
   <div class="container">
-    <!-- 🔴 CHANGE IMAGE NAME HERE -->
-    <img src="couple.jpg" alt="Us ❤️">
 
-    <h1>Ishmeet, will you be my Valentine? 💕</h1>
+    <!-- Couple Image -->
+    <img src="unnamed.jpg" class="couple-img" alt="Us ❤️">
 
-    <button id="yesBtn" onclick="sayYes()">Yes 💖</button>
-    <button id="noBtn" onclick="moveNo()">No 🙈</button>
+    <!-- Question -->
+    <h1>Ishmeet, will you be my Valentine? 💕💖</h1>
 
-    <div id="message">Yayyy!!! ❤️🥰 You made my day!</div>
+    <!-- Buttons -->
+    <div>
+      <button id="yesBtn">Yes 💖</button>
+      <button id="noBtn">No 😳</button>
+    </div>
+
+    <!-- Celebration (hidden initially) -->
+    <div id="celebration">
+      <h2>Yayyyyy!! 🎉💃</h2>
+      <p>Best decision ever 😍</p>
+      <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" width="260">
+    </div>
+
   </div>
+
+  <!-- Music -->
+  <audio id="bgMusic" autoplay loop>
+    <source src="https://www.bensound.com/bensound-music/bensound-romantic.mp3">
+  </audio>
+
+  <audio id="yesMusic">
+    <source src="https://www.bensound.com/bensound-music/bensound-happyrock.mp3">
+  </audio>
 
   <script>
     let noCount = 0;
 
-    function moveNo() {
-      const noBtn = document.getElementById("noBtn");
+    const noBtn = document.getElementById("noBtn");
+    const yesBtn = document.getElementById("yesBtn");
+    const celebration = document.getElementById("celebration");
+    const bgMusic = document.getElementById("bgMusic");
+    const yesMusic = document.getElementById("yesMusic");
+
+    noBtn.addEventListener("click", () => {
       noCount++;
+      noBtn.style.position = "absolute";
+      noBtn.style.left = Math.random() * 80 + "vw";
+      noBtn.style.top = Math.random() * 80 + "vh";
 
       if (noCount >= 6) {
         noBtn.style.display = "none";
-        return;
       }
+    });
 
-      const x = Math.random() * 200 - 100;
-      const y = Math.random() * 200 - 100;
+    yesBtn.addEventListener("click", () => {
+      celebration.style.display = "block";
+      bgMusic.pause();
+      yesMusic.play();
+      startHearts();
+    });
 
-      noBtn.style.transform = `translate(${x}px, ${y}px)`;
-    }
+    function startHearts() {
+      setInterval(() => {
+        const heart = document.createElement("div");
+        heart.className = "heart";
+        heart.innerHTML = "💖";
+        heart.style.left = Math.random() * 100 + "vw";
+        heart.style.animationDuration = (3 + Math.random() * 3) + "s";
+        document.body.appendChild(heart);
 
-    function sayYes() {
-      document.getElementById("bgMusic").pause();
-      document.getElementById("yesMusic").play();
-
-      document.getElementById("yesBtn").style.display = "none";
-      document.getElementById("noBtn").style.display = "none";
-
-      document.getElementById("message").style.display = "block";
+        setTimeout(() => heart.remove(), 6000);
+      }, 300);
     }
   </script>
 
